test/all_output.txt
test.c: In function ‘f’:
test.c:5: warning: passing argument 1 of ‘f’ makes integer from pointer without a cast
test.c:3: note: expected ‘int’ but argument is of type ‘char *’
test.c: In function ‘main’:
test.c:11: warning: initialization makes pointer from integer without a cast
test.c:12: warning: initialization makes integer from pointer without a cast
test.c:13: error: too few arguments to function ‘f’
test.c:14: error: expected ‘;’ before ‘return’
Test.java:9: incompatible types
found   : java.lang.String
required: int
		int a = "xxx";
		        ^
Test.java:10: incompatible types
found   : int
required: java.lang.String
		String str = 45;
		             ^
Test.java:11: non-static method go() cannot be referenced from a static context
		go();
		^
3 errors
